#114 - Valid attack flags now include Guided, Homing, Unarmed, Aggressive Parry, and Kick

--- a/templates/item/Equipment-sheet.html
+++ b/templates/item/Equipment-sheet.html
@@ -166,6 +166,8 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        agp: Aggressive Parry<br>
+                                        kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
                                     </div>
@@ -269,6 +271,8 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        agp: Aggressive Parry<br>
+                                        kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
                                     </div>
@@ -407,6 +411,8 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        agp: Aggressive Parry<br>
+                                        kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
                                     </div>
