--- a/templates/item/Ritual-sheet.html
+++ b/templates/item/Ritual-sheet.html
@@ -785,6 +785,8 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        agp: Aggressive Parry<br>
+                                        kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
                                     </div>
@@ -888,6 +890,8 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        agp: Aggressive Parry<br>
+                                        kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
                                     </div>
@@ -1026,6 +1030,8 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        agp: Aggressive Parry<br>
+                                        kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
                                     </div>
