--- a/templates/item/Spell-sheet.html
+++ b/templates/item/Spell-sheet.html
@@ -249,6 +249,8 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        agp: Aggressive Parry<br>
+                                        kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
                                     </div>
@@ -352,6 +354,8 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        agp: Aggressive Parry<br>
+                                        kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
                                     </div>
@@ -490,6 +494,8 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        agp: Aggressive Parry<br>
+                                        kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
                                     </div>
