--- a/templates/item/Trait-sheet.html
+++ b/templates/item/Trait-sheet.html
@@ -154,6 +154,8 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        agp: Aggressive Parry<br>
+                                        kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
                                     </div>
@@ -257,6 +259,8 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        agp: Aggressive Parry<br>
+                                        kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
                                     </div>
@@ -395,6 +399,8 @@
                                     <div>
                                         <span style="text-decoration: underline">Valid entries are:</span><br>
                                         una: Unarmed (Vulnerable to damage following a failed parry)<br>
+                                        agp: Aggressive Parry<br>
+                                        kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
                                     </div>
